Implement google and facebook login

--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,6 @@
 <body>
   <script src="https://accounts.google.com/gsi/client" async defer></script>
   <app-root></app-root>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
 </body>
 </html>
