Add SEO meta tags

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,10 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="description" content="AMIMA is a Community with a mission to “inspire lives”, Amima is a lifestyle platform that inspires people to discover and connect with diverse lifestyles through reviews and recommendations">
+  <meta name="keywords" content="Lifestyle, photos, reviews, community, recommendations, AMIMA, anima lives, lives, amimalive">
+  <meta name="apple-itunes-app" content="app-id=1639837338">
+  <meta name="google-play-app" content="app-id=com.amima.amima_app">
 </head>
 <body>
   <app-root></app-root>
